--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,8 @@
     let player = new Player({
         id: 'app',
         cssFullscreen: true,
-        url: 'http://s1.pstatp.com/cdn/expire-1-M/byted-player-videos/1.0.0/xgplayer-demo.mp4'
+        playbackRate: [0.5, 0.75, 1, 1.5, 2],
+        url: 'https://ss0.bdstatic.com/-0U0bnSm1A5BphGlnYG/cae-legoup-video-target/461b1dc0-c2e5-4bce-9c58-5ffea8f26c27.mp4'
     });
 </script>
 </body>
